# py-jbrief-api

./: jbrief.sqlite3  pyproject.toml  setup.cfg
jbrief/: app.py  db.py  models.py  scraper.py
migrations/models/: 0_20220513175143_init.sql
