[metadata]
name = jbrief
description = a REST api for Jeopardy data
author = Freddy A. Boulton
license = BSD 3-clause

[options]
zip_safe = False
packages = find:
platforms = any
install_requires =
    fastapi[all]
    beautifulsoup4
    databases
    html5lib
    tortoise-orm
    aerich
python_requires = >=3.9
setup_requires =
    setuptools_scm

[bdist_wheel]
universal = 1

[options.extras_require]
test =
    pytest

all =
    %(test)s